GNOME Bugzilla – Bug 679823
[0.11] playsink: pad 0x123456 has no probe with id `4' warning
Last modified: 2012-09-04 08:07:11 UTC
I get this occasionally when switching to the next song in totem's playlist. Seems to be a race of some sort(?). Stack trace (other threads not particularly interesting):
+ Trace 230504
Thread 17 (Thread 0x7fffcbd07700 (LWP 4288))
I actually get this constantly now, after which things hang (but can continue to next song in totem with next button). Marking up.
To reproduce this you simply need to play a video file, then an audio file, then a video file again. I attached a sample player to reproduce it easily. Run it this way: ./player <video_file> <audio_file> <video_file>
Created attachment 222838 [details] simple wrapper around playbin to play multiple files
commit ac61fb52211418a269b61f4b542b3cc3c006d441 Author: Wim Taymans <wim.taymans@collabora.co.uk> Date: Tue Sep 4 10:03:25 2012 +0200 playsink: unblock pads before releasing Fixes https://bugzilla.gnome.org/show_bug.cgi?id=679823