playsink: unblock pads before releasing

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=679823